--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -591,7 +591,7 @@ fieldset[disabled] .btn-success.active {
     display: none;
 }
 
-.portfolio-modal .modal-content .modal-body .portfolio-description {
+.portfolio-modal .modal-content .modal-body .portfolio-description, .modal-body {
     font-size: 1.1em;
     text-align: left !important;
     font-family: "Lora", "Merriweather", serif !important;
@@ -601,3 +601,4 @@ fieldset[disabled] .btn-success.active {
     color: snow;
     background-color: #2C3E50;
 }
+
