--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -10,6 +10,7 @@ body {
 
 p {
     font-size: 20px;
+    margin: 20px 0;
 }
 
 p.small {
@@ -27,13 +28,19 @@ a.active {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 400;
+}
+
+h3 {
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-weight: 600;
+    padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 hr.star-light,
@@ -219,7 +226,7 @@ header .intro-text .skills {
 }
 
 section {
-    padding: 100px 0;
+    padding: 50px 0;
 }
 
 section h2 {
@@ -620,5 +627,64 @@ fieldset[disabled] .btn-success.active {
 *::selection {
     color: snow;
     background-color: #2C3E50;
+}
+
+#news .news-item {
+    margin: 0 0 15px;
+    right: 0;
+}
+
+#news .news-item .news-link {
+    display: block;
+    position: relative;
+    max-width: 1200px;
+    max-height: 600px;
+    margin: 0 auto;
+
+    overflow: hidden;
+}
+
+#news .news-item .news-link .caption {
+    text-shadow: 2px 2px #000000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+}
+
+#news .news-item .news-link .news-image {
+    display: block;
+    height: auto;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+#news .news-item .news-link .caption .caption-content {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    top: 50%;
+    margin-top: -30px;
+    color: white;
+}
+
+#news .news-item .news-link .caption .caption-content p {
+    margin-top: -12px;
+    font-size: 40px;
+
+}
+
+#news .news-item .news-link .caption .caption-content h3,
+#news .news-item .news-link .caption .caption-content h4 {
+    margin: 0;
+}
+
+#news .news-item .news-link .caption:hover {
+    background: rgba(24, 188, 156, 0.9);
+
 }
 
