--- a/liyu/css/main.css
+++ b/liyu/css/main.css
@@ -22,7 +22,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #18BC9C;
+    color: #fc9cdf;
     outline: none;
 }
 
@@ -64,21 +64,21 @@ hr.star-primary:after {
 }
 
 hr.star-light {
-    border-color: #18BC9C;
+    border-color: #fc9cdf;
 }
 
 hr.star-light:after {
     background-color: white;
-    color: #18BC9C;
+    color: #fc9cdf;
 }
 
 hr.star-primary {
-    border-color: #18BC9C;
+    border-color: #fc9cdf;
 }
 
 hr.star-primary:after {
     background-color: white;
-    color: #18BC9C;
+    color: #fc9cdf;
 }
 
 .img-centered {
@@ -151,7 +151,7 @@ header .intro-text .intro {
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
 }
 
@@ -164,31 +164,31 @@ header .intro-text .intro {
 }
 
 .navbar-custom .navbar-nav li a:hover {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
     outline: none;
 }
 
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
 }
 
 .navbar-custom .navbar-nav li.active a {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
 }
 
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
 }
 
 .navbar-custom .navbar-toggle {
-    color: #18BC9C;
+    color: #fc9cdf;
     text-transform: uppercase;
     font-size: 10px;
     border-color: white;
@@ -196,9 +196,9 @@ header .intro-text .intro {
 
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-    background-color: #18BC9C;
+    background-color: #fc9cdf;
     color: white;
-    border-color: #18BC9C;
+    border-color: #fc9cdf;
 }
 
 @media (min-width: 768px) {
@@ -262,7 +262,7 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
-    background: rgba(24, 188, 156, 0.9);
+    background: rgba(252, 156, 223, 0.9);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -283,7 +283,7 @@ section.success {
     font-size: 20px;
     text-align: center;
     top: 50%;
-    margin-top: -12px;
+    margin-top: -30px;
     color: white;
 }
 
@@ -355,7 +355,7 @@ section.success {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #18BC9C;
+    color: #fc9cdf;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -398,7 +398,7 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    color: #18BC9C;
+    color: #fc9cdf;
     background: white;
     border: solid 2px white;
 }
@@ -453,7 +453,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-success {
     color: black;
     background-color: white;
-    border-color: #18BC9C;
+    border-color: #fc9cdf;
     font-weight: 500;
 }
 
@@ -488,12 +488,12 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-    background-color: #18BC9C;
-    border-color: #18BC9C;
+    background-color: #fc9cdf;
+    border-color: #fc9cdf;
 }
 
 .btn-success .badge {
-    color: #18BC9C;
+    color: #fc9cdf;
     background-color: white;
 }
 
@@ -665,17 +665,15 @@ fieldset[disabled] .btn-success.active {
 #news .news-item .news-link .caption .caption-content {
     position: absolute;
     width: 100%;
-    height: 40px;
+    height: 60px;
     text-align: center;
-    top: 50%;
-    margin-top: -30px;
+    top: 30%;
     color: white;
 }
 
 #news .news-item .news-link .caption .caption-content p {
     margin-top: -12px;
     font-size: 40px;
-
 }
 
 #news .news-item .news-link .caption .caption-content h3,
