--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -284,7 +284,7 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
-    background: rgba(44, 62, 80, 0.95);
+    background-color: rgba(249, 249, 249, 0.1);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -295,6 +295,7 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
+    background: rgba(44, 62, 80, 0.95);
     opacity: 1;
 }
 
