--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -282,6 +282,7 @@ section.success {
     font-family: "Merriweather", serif;
     font-size: 120%;
     text-align: center;
+    min-height: 50px;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
@@ -658,4 +659,82 @@ fieldset[disabled] .btn-success.active {
 
 #mainNav .fa {
     font-size: 80%;
+}
+
+.not-found-text h2{
+    padding-top: 200px;
+    font-family: "Merriweather", serif;
+    font-size: 200%;
+    text-align: center;
+}
+
+.not-found-text p{
+    font-family: "Merriweather", serif;
+    font-size: 150%;
+}
+
+article {
+    padding-top: 200px;
+    padding-bottom: 20px;
+}
+
+article h2 {
+    font-family: "Hind", sans-serif;
+    font-size: 300%;
+    font-weight: 500;
+    text-align: center;
+}
+
+article h3 {
+    font-family: "Hind", sans-serif;
+    font-size: 200%;
+    font-weight: 500;
+    text-align: left;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 1em;
+}
+
+article p {
+    font-size: 1.25em;
+    line-height: 1.8em;
+    font-family: "Merriweather", serif;
+    text-align: left;
+    margin: 1.25em 0;
+}
+
+article .notes {
+    background-color: #f9f9f9;
+    color: #666666;
+    border: 1px solid #e0e0e0;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px #d3d3d3;
+    padding-left: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+article li {
+    font-size: 1.25em;
+    line-height: 1.5em;
+    font-family: "Merriweather", serif;
+    text-align: left;
+}
+
+article .game {
+    width: 100%;
+}
+
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
