--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -738,3 +738,27 @@ article .game {
     width: 100%;
     height: 100%;
 }
+
+
+
+
+
+
+/* BLOG */
+#blog h2 {
+    margin-top: 200px;
+}
+
+#blog .post-card {
+    border: 1px solid #e0e0e0;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px #d3d3d3;
+
+    display: block;
+    position: relative;
+    margin: 20px auto;
+}
+
+#blog .post-card .post-image {
+    margin: 0 auto;
+}
