--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -22,7 +22,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #08c1e6;
+    color: #bfbfbf;
     outline: none;
 }
 
@@ -217,7 +217,7 @@ header .intro-text .bio {
     }
 
     .navbar-custom.affix {
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     .navbar-custom.affix .navbar-brand {
@@ -270,7 +270,7 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
-    background-color: rgba(249, 249, 249, 0.1);
+    background-color: rgba(73, 73, 73, 0.95);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -281,7 +281,6 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
-    background: rgba(44, 62, 80, 0.95);
     opacity: 1;
 }
 
@@ -289,7 +288,7 @@ section.success {
     position: absolute;
     width: 100%;
     height: 20px;
-    font-size: 20px;
+    font-size: 1.5em;
     text-align: center;
     top: 50%;
     margin-top: -12px;
@@ -402,7 +401,7 @@ footer .footer-below {
 
 .btn-outline {
     color: #494949;
-    font-size: 20px;
+    font-size: 30px;
     border: solid 2px #494949;
     background: transparent;
     transition: all 0.3s ease-in-out;
@@ -433,7 +432,7 @@ footer .footer-below {
 .open .dropdown-toggle.btn-primary {
     color: white;
     background-color: #1a242f;
-    border-color: #161f29;
+    border-color: #1a242f;
 }
 
 .btn-primary:active,
@@ -466,63 +465,15 @@ fieldset[disabled] .btn-primary.active {
     background-color: white;
 }
 
-.btn-success {
-    color: black;
-    background-color: white;
-    border-color: #08c1e6;
-    font-weight: 500;
-}
-
-.btn-success:hover,
-.btn-success:focus,
-.btn-success:active,
-.btn-success.active,
-.open .dropdown-toggle.btn-success {
-    color: white;
-    background-color: #08c1e6;
-    border-color: #08c1e6;
-
-}
-
-.btn-success:active,
-.btn-success.active,
-.open .dropdown-toggle.btn-success {
-    background-image: none;
-}
-
-.btn-success.disabled,
-.btn-success[disabled],
-fieldset[disabled] .btn-success,
-.btn-success.disabled:hover,
-.btn-success[disabled]:hover,
-fieldset[disabled] .btn-success:hover,
-.btn-success.disabled:focus,
-.btn-success[disabled]:focus,
-fieldset[disabled] .btn-success:focus,
-.btn-success.disabled:active,
-.btn-success[disabled]:active,
-fieldset[disabled] .btn-success:active,
-.btn-success.disabled.active,
-.btn-success[disabled].active,
-fieldset[disabled] .btn-success.active {
-    background-color: #08c1e6;
-    border-color: #08c1e6;
-}
-
-.btn-success .badge {
-    color: #08c1e6;
-    background-color: white;
-}
-
 .btn-social {
     display: inline-block;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     border: 2px solid #6d6d6d;
     border-radius: 100%;
     text-align: center;
-    font-size: 20px;
-    line-height: 45px;
+    font-size: 30px;
+    line-height: 52px;
 }
 
 .btn:focus,
