--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -708,7 +708,7 @@ article figcaption {
 
 /* BLOG */
 #blog h2 {
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 #blog .post-card {
@@ -735,6 +735,7 @@ article figcaption {
 #blog .post-card .image-container{
     overflow: hidden;
     max-height: 200px;
+    font-size: 110%;
 }
 
 #blog .post-card .post-container {
