--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -330,11 +330,11 @@ footer {
 }
 
 footer h3 {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 footer .footer-above {
-    padding-top: 30px;
+    padding-top: 20px;
     background-color: white;
     border-top: 1px solid #e0e0e0;
     box-shadow: 0px 0px 1px #b2b2b2;
@@ -342,11 +342,12 @@ footer .footer-above {
 }
 
 footer .footer-col {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 footer .footer-below {
-    padding: 25px 0;
+    padding-top: 10px;
+    padding-bottom: 35px;
     background-color: white;
     font-family: "Merriweather", serif;
     font-size: 110%;
