--- a/liyu/css/main.css
+++ b/liyu/css/main.css
@@ -1,688 +1,131 @@
 /*!
- * Start Bootstrap - Freelancer v3.3.7+1 (http://startbootstrap.com/template-overviews/freelancer)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ * Start Bootstrap - 4 Col Portfolio (http://startbootstrap.com/template-overviews/4-col-portfolio)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-4-col-portfolio/blob/master/LICENSE)
  */
+
+/*
+
+Background color: #f9f9f9;
+Border color: #515151;
+Main font: Cinzel;
+
+
+
+*/
+
 body {
-    font-family: 'Lato', 'Open Sans', Helvetica, Arial, sans-serif;
-    overflow-x: hidden;
+	color: black;
+    padding-top: 54px;
+    background: #f9f9f9;
+    font-family: "Cinzel", serif;
 }
 
-p {
-    font-size: 100%;
-    margin: 20px 0;
+@media (min-width: 992px) {
+    body {
+        padding-top: 56px;
+    }
 }
 
-p.small {
-    font-size: 16px;
+header {
+	margin-top: 100px;
 }
 
-a,
-a:hover,
-a:focus,
-a:active,
-a.active {
-    color: #fc9cdf;
-    outline: none;
+@media (min-width: 1500px) {
+	.container {
+	      max-width: 1400px;
+	      width: 100%;
+	}
 }
 
-h1,
-h2,
-h4,
-h5,
-h6 {
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    font-weight: 400;
+.navbar {
+	background-color: #f9f9f9;
 }
 
-h3 {
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    font-weight: 600;
-    padding-top: 30px;
-    padding-bottom: 10px;
+.navbar a{
+	color: black;
+	font-family: "Cinzel";
 }
 
-hr.star-light,
-hr.star-primary {
+.navbar li a {
+	font-size: 1.2em;
+}
+
+.navbar .navbar-brand {
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+.navbar-toggler-icon {
+	padding-top: 3px;
+	font-size: 1.5em;
+}
+
+.navbar-toggler-icon:hover {
+	cursor: pointer;
+}
+
+.star-light {
     padding: 0;
     border: none;
-    border-top: solid 2px;
+    border-top: 1px solid #515151;
+    box-shadow: 0px 0px 1px #515151;
+
     text-align: center;
-    max-width: 250px;
+    max-width: 350px;
     margin: 25px auto 30px;
 }
 
-hr.star-light:after,
-hr.star-primary:after {
-    content: "\f005";
-    font-family: FontAwesome;
+.star-light:after {
     display: inline-block;
     position: relative;
     top: -0.8em;
     font-size: 1.2em;
     padding: 0 0.125em;
+
+    background-color: transparent;
+    color: #b2b2b2;
 }
 
-hr.star-light {
-    border-color: #fc9cdf;
-}
-
-hr.star-light:after {
-    background-color: white;
-    color: #fc9cdf;
-}
-
-hr.star-primary {
-    border-color: #fc9cdf;
-}
-
-hr.star-primary:after {
-    background-color: white;
-    color: #fc9cdf;
-}
-
-.img-centered {
-    margin: 0 auto;
-}
-
-header {
-    text-align: center;
-    background: white;
-    color: black;
-}
-
-header .container {
-    padding-top: 100px;
-    padding-bottom: 50px;
-}
-
-header img {
-    display: block;
-    margin: 0 auto 20px;
-}
-
-header .intro-text .name {
-    display: block;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    text-transform: none;
-    font-weight: 400;
-    font-size: 2em;
-}
-
-header .intro-text .intro {
-    font-size: 1.25em;
-    font-weight: 300;
-}
-
-@media (min-width: 768px) {
-    header .container {
-        padding-top: 200px;
-        padding-bottom: 100px;
-    }
-
-    header .intro-text .name {
-        font-size: 4.75em;
-    }
-
-    header .intro-text .intro {
-        font-size: 1.75em;
-    }
-}
-
-.navbar-custom {
-    background: white;
-    color: black;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 400;
-    border: none;
-}
-
-.navbar-custom a:focus {
-    outline: none;
-}
-
-.navbar-custom .navbar-brand {
-    color: black;
-    text-transform: none;
-}
-
-.navbar-custom .navbar-brand:hover,
-.navbar-custom .navbar-brand:focus,
-.navbar-custom .navbar-brand:active,
-.navbar-custom .navbar-brand.active {
-    color: #fc9cdf;
-    background-color: white;
-}
-
-.navbar-custom .navbar-nav {
-    letter-spacing: 1px;
-}
-
-.navbar-custom .navbar-nav li a {
-    color: black;
-}
-
-.navbar-custom .navbar-nav li a:hover {
-    color: #fc9cdf;
-    background-color: white;
-    outline: none;
-}
-
-.navbar-custom .navbar-nav li a:focus,
-.navbar-custom .navbar-nav li a:active {
-    color: #fc9cdf;
-    background-color: white;
-}
-
-.navbar-custom .navbar-nav li.active a {
-    color: #fc9cdf;
-    background-color: white;
-}
-
-.navbar-custom .navbar-nav li.active a:hover,
-.navbar-custom .navbar-nav li.active a:focus,
-.navbar-custom .navbar-nav li.active a:active {
-    color: #fc9cdf;
-    background-color: white;
-}
-
-.navbar-custom .navbar-toggle {
-    color: #fc9cdf;
-    text-transform: uppercase;
-    font-size: 10px;
-    border-color: white;
-}
-
-.navbar-custom .navbar-toggle:hover,
-.navbar-custom .navbar-toggle:focus {
-    background-color: #fc9cdf;
-    color: white;
-    border-color: #fc9cdf;
-}
-
-@media (min-width: 768px) {
-    .navbar-custom {
-        padding: 25px 0;
-        -webkit-transition: padding 0.3s;
-        -moz-transition: padding 0.3s;
-        transition: padding 0.3s;
-    }
-
-    .navbar-custom .navbar-brand {
-        font-size: 2em;
-        -webkit-transition: all 0.3s;
-        -moz-transition: all 0.3s;
-        transition: all 0.3s;
-    }
-
-    .navbar-custom.affix {
-        padding: 10px 0;
-    }
-
-    .navbar-custom.affix .navbar-brand {
-        font-size: 1.5em;
-    }
-}
-
-section {
-    padding: 50px 0;
-}
-
-section h2 {
-    margin: 0;
-    font-size: 3em;
-}
-
-section.success {
-    background: white;
-    color: black;
-}
-
-@media (max-width: 767px) {
-    section {
-        padding: 75px 0;
-    }
-
-    section.first {
-        padding-top: 75px;
-    }
-}
-
-#portfolio .portfolio-item {
-    margin: 0 0 15px;
-    right: 0;
-}
-
-#portfolio .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption {
-    background: rgba(252, 156, 223, 0.9);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
+.portfolio-item {
+	margin-bottom: 10px;
+    padding: 6px;
     transition: all ease 0.5s;
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    width: 100%;
-    height: 20px;
-    font-size: 20px;
-    text-align: center;
-    top: 50%;
-    margin-top: -30px;
-    color: white;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#portfolio * {
-    z-index: 2;
-}
-
-@media (min-width: 767px) {
-    #portfolio .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
-
-.floating-label-form-group {
-    position: relative;
-    margin-bottom: 0;
-    padding-bottom: 0.5em;
-    border-bottom: 1px solid #eeeeee;
-}
-
-.floating-label-form-group input,
-.floating-label-form-group textarea {
-    z-index: 1;
-    position: relative;
-    padding-right: 0;
-    padding-left: 0;
+    border-radius: 3px;
     border: none;
-    border-radius: 0;
-    font-size: 1.5em;
-    background: none;
-    box-shadow: none !important;
-    resize: none;
 }
 
-.floating-label-form-group label {
-    display: block;
-    z-index: 0;
-    position: relative;
-    top: 2em;
-    margin: 0;
-    font-size: 0.85em;
-    line-height: 1.764705882em;
-    vertical-align: middle;
-    vertical-align: baseline;
-    opacity: 0;
-    -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-    -moz-transition: top 0.3s ease, opacity 0.3s ease;
-    -ms-transition: top 0.3s ease, opacity 0.3s ease;
-    transition: top 0.3s ease, opacity 0.3s ease;
+.portfolio-item .card {
+	border: 1px solid whitesmoke;
 }
 
-.floating-label-form-group:not(:first-child) {
-    padding-left: 14px;
-    border-left: 1px solid #eeeeee;
+.portfolio-item .card .card-title {
+	color: #515151;
 }
 
-.floating-label-form-group-with-value label {
-    top: 0;
-    opacity: 1;
+.portfolio-item .card .card-text {
+	color: #515151;
+	background-color: transparent;
 }
 
-.floating-label-form-group-with-focus label {
-    color: #fc9cdf;
+.portfolio-item a {
+	background-color: transparent;
+	overflow: hidden;
 }
 
-form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eeeeee;
+.portfolio-item a:hover {
+	text-decoration: none;
+
+}
+
+.portfolio-item:hover {
+	/*  box-shadow: 0px 0px 10px #515151;*/
+
+	background-color: rgba(81, 81, 81, 0.8);
 }
 
 footer {
-    color: white;
-    padding-top: 3em;
+	background-color: #f9f9f9;
+	border-top: 1px solid #cccccc;
+	color: black;
 }
-
-footer h3 {
-    margin-bottom: 30px;
-}
-
-footer .footer-above {
-    padding-top: 50px;
-    background-color: #2C3E50;
-}
-
-footer .footer-col {
-    margin-bottom: 50px;
-}
-
-footer .footer-below {
-    padding: 25px 0;
-    background-color: #233140;
-}
-
-.btn-outline {
-    color: white;
-    font-size: 20px;
-    border: solid 2px white;
-    background: transparent;
-    transition: all 0.3s ease-in-out;
-    margin-top: 15px;
-}
-
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active {
-    color: #fc9cdf;
-    background: white;
-    border: solid 2px white;
-}
-
-.btn-primary {
-    color: white;
-    background-color: #2C3E50;
-    border-color: #2C3E50;
-    font-weight: 700;
-}
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-    color: white;
-    background-color: #1a242f;
-    border-color: #161f29;
-}
-
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-    background-image: none;
-}
-
-.btn-primary.disabled,
-.btn-primary[disabled],
-fieldset[disabled] .btn-primary,
-.btn-primary.disabled:hover,
-.btn-primary[disabled]:hover,
-fieldset[disabled] .btn-primary:hover,
-.btn-primary.disabled:focus,
-.btn-primary[disabled]:focus,
-fieldset[disabled] .btn-primary:focus,
-.btn-primary.disabled:active,
-.btn-primary[disabled]:active,
-fieldset[disabled] .btn-primary:active,
-.btn-primary.disabled.active,
-.btn-primary[disabled].active,
-fieldset[disabled] .btn-primary.active {
-    background-color: #2C3E50;
-    border-color: #2C3E50;
-}
-
-.btn-primary .badge {
-    color: #2C3E50;
-    background-color: white;
-}
-
-.btn-success {
-    color: black;
-    background-color: white;
-    border-color: #fc9cdf;
-    font-weight: 500;
-}
-
-.btn-success:hover,
-.btn-success:focus,
-.btn-success:active,
-.btn-success.active,
-.open .dropdown-toggle.btn-success {
-    color: white;
-    background-color: #128f76;
-    border-color: #11866f;
-}
-
-.btn-success:active,
-.btn-success.active,
-.open .dropdown-toggle.btn-success {
-    background-image: none;
-}
-
-.btn-success.disabled,
-.btn-success[disabled],
-fieldset[disabled] .btn-success,
-.btn-success.disabled:hover,
-.btn-success[disabled]:hover,
-fieldset[disabled] .btn-success:hover,
-.btn-success.disabled:focus,
-.btn-success[disabled]:focus,
-fieldset[disabled] .btn-success:focus,
-.btn-success.disabled:active,
-.btn-success[disabled]:active,
-fieldset[disabled] .btn-success:active,
-.btn-success.disabled.active,
-.btn-success[disabled].active,
-fieldset[disabled] .btn-success.active {
-    background-color: #fc9cdf;
-    border-color: #fc9cdf;
-}
-
-.btn-success .badge {
-    color: #fc9cdf;
-    background-color: white;
-}
-
-.btn-social {
-    display: inline-block;
-    height: 50px;
-    width: 50px;
-    border: 2px solid white;
-    border-radius: 100%;
-    text-align: center;
-    font-size: 20px;
-    line-height: 45px;
-}
-
-.btn:focus,
-.btn:active,
-.btn.active {
-    outline: none;
-}
-
-.scroll-top {
-    position: fixed;
-    right: 2%;
-    bottom: 2%;
-    width: 50px;
-    height: 50px;
-    z-index: 1049;
-}
-
-.scroll-top .btn {
-    font-size: 20px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    line-height: 28px;
-}
-
-.scroll-top .btn:focus {
-    outline: none;
-}
-
-.portfolio-modal .modal-content {
-    border-radius: 0;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    min-height: 100%;
-    padding: 100px 0;
-    text-align: center;
-}
-
-.portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content .item-details {
-    margin: 10px 0;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    top: 25px;
-    right: 25px;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: 0.3;
-}
-
-.portfolio-modal .close-modal .lr {
-    height: 75px;
-    width: 1px;
-    margin-left: 35px;
-    background-color: #2C3E50;
-    transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    /* IE 9 */
-    -webkit-transform: rotate(45deg);
-    /* Safari and Chrome */
-    z-index: 1051;
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    height: 75px;
-    width: 1px;
-    background-color: #2C3E50;
-    transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    /* IE 9 */
-    -webkit-transform: rotate(90deg);
-    /* Safari and Chrome */
-    z-index: 1052;
-}
-
-.portfolio-modal .modal-backdrop {
-    opacity: 0;
-    display: none;
-}
-
-
-/* my own code below */
-.portfolio-modal .modal-content .modal-body .portfolio-description,
-.modal-body .portfolio-description{
-    font-size: 1em;
-    text-align: left !important;
-    font-family: "Lora", "Merriweather", serif !important;
-}
-
-.modal-body {
-    padding: 5px;
-}
-
-.modal-body img {
-    padding-top: 1em;
-}
-
-.modal-body .portfolio-description p{
-    padding-top: 1em;
-}
-
-*::selection {
-    color: snow;
-    background-color: #2C3E50;
-}
-
-#news .news-item {
-    margin: 0 0 15px;
-    right: 0;
-}
-
-#news .news-item .news-link {
-    display: block;
-    position: relative;
-    max-width: 1200px;
-    max-height: 600px;
-    margin: 0 auto;
-
-    overflow: hidden;
-}
-
-#news .news-item .news-link .caption {
-    text-shadow: 2px 2px #000000;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    transition: all ease 0.5s;
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-}
-
-#news .news-item .news-link .news-image {
-    display: block;
-    height: auto;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-#news .news-item .news-link .caption .caption-content {
-    position: absolute;
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    top: 30%;
-    color: white;
-}
-
-#news .news-item .news-link .caption .caption-content p {
-    margin-top: -12px;
-    font-size: 40px;
-}
-
-#news .news-item .news-link .caption .caption-content h3,
-#news .news-item .news-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#news .news-item .news-link .caption:hover {
-    background: rgba(24, 188, 156, 0.9);
-
-}
-
