--- a/liyu/css/main.css
+++ b/liyu/css/main.css
@@ -8,17 +8,27 @@
 
 Background color: #f9f9f9;
 Border color: #515151;
+Highlight color: #00b3cc;
 Main font: Cinzel;
 
 
 
 */
+*::selection {
+	background-color: #515151;
+	color: #f9f9f9;
+}
 
 body {
 	color: black;
-    padding-top: 54px;
+    padding-top: 50px;
     background: #f9f9f9;
-    font-family: "Cinzel", serif;
+    font-family: "Kelly Slab", serif;
+}
+
+h2 {
+	font-size: 2em;
+	font-family: "Kelly Slab", serif;
 }
 
 @media (min-width: 992px) {
@@ -44,16 +54,22 @@ header {
 
 .navbar a{
 	color: black;
-	font-family: "Cinzel";
+	
 }
 
 .navbar li a {
-	font-size: 1.2em;
+	font-size: 1.1em;
+	transition: all ease 0.3s;
+}
+
+.navbar li a:hover {
+	color: #00b3cc;
 }
 
 .navbar .navbar-brand {
-	font-size: 1.5em;
+	font-size: 1.8em;
 	font-weight: 700;
+	font-family: "Kelly Slab", serif;
 }
 
 .navbar-toggler-icon {
@@ -99,23 +115,23 @@ header {
 	border: 1px solid whitesmoke;
 }
 
-.portfolio-item .card .card-title {
-	color: #515151;
-}
-
 .portfolio-item .card .card-text {
 	color: #515151;
 	background-color: transparent;
+	font-family: "Kelly Slab", serif;
+	font-size: 1.1em;
 }
 
 .portfolio-item a {
 	background-color: transparent;
 	overflow: hidden;
+	transition: all ease 0.5s;
+	color: black;
 }
 
 .portfolio-item a:hover {
 	text-decoration: none;
-
+	color: #00b3cc;
 }
 
 .portfolio-item:hover {
@@ -124,8 +140,158 @@ header {
 	background-color: rgba(81, 81, 81, 0.8);
 }
 
+.bio p {
+	font-size: 1.2em;
+}
+
 footer {
 	background-color: #f9f9f9;
 	border-top: 1px solid #cccccc;
 	color: black;
+	margin-top: 100px;
+	font-size: 1.2em;
 }
+
+footer li {
+	display: inline;
+}
+
+footer #contact {
+	margin-top: 30px;
+	margin-bottom: 20px;
+	font-size: 1.6em;
+}
+
+footer #copyright {
+	margin-top: 50px;
+}
+
+article {
+	margin-top: 100px;
+    padding-bottom: 20px;
+}
+
+article h2 {
+    font-family: "Hind", sans-serif;
+    font-size: 300%;
+    font-weight: 500;
+    text-align: center;
+}
+
+article h3 {
+    font-family: "Hind", sans-serif;
+    font-size: 200%;
+    font-weight: 500;
+    text-align: left;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 1em;
+}
+
+
+article h4 {
+    font-family: "Hind", sans-serif;
+    font-size: 150%;
+    font-weight: 400;
+    text-align: left;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 2em;
+}
+
+article p {
+    font-size: 1.25em;
+    line-height: 1.6em;
+    font-family: "Kelly Slab", serif;
+    text-align: left;
+    margin: 1.25em 0;
+}
+
+article .notes {
+    background-color: #f9f9f9;
+    color: #666666;
+    border: 1px solid #e0e0e0;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px #d3d3d3;
+    padding-left: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+article li {
+    font-size: 1.25em;
+    line-height: 1.5em;
+    font-family: "Kelly Slab", serif;
+    text-align: left;
+    margin-left: 20px;
+}
+
+article .game {
+    width: 100%;
+}
+
+article img {
+    max-width: 100%;
+    padding: 10px 0;
+}
+
+article figcaption {
+    font-family: "Kelly Slab", serif;
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.btn-outline {
+    color: #494949;
+    font-size: 30px;
+    border: solid 2px #494949;
+    background: transparent;
+    transition: all 0.3s ease-in-out;
+    margin-top: 15px;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active,
+.btn-outline.active {
+    color: snow;
+    background: #494949;
+    border: 2px solid #494949;
+    box-shadow: 0 0 2px #494949;
+}
+
+.btn-social {
+    display: inline-block;
+    height: 55px;
+    width: 55px;
+    border: 2px solid #f9f9f9;
+    border-radius: 10%;
+    text-align: center;
+    font-size: 30px;
+    line-height: 48px;
+    margin: 0px;
+}
+
+.btn:focus,
+.btn:active,
+.btn.active {
+    outline: none;
+}
+
