--- a/liyu/css/main.css
+++ b/liyu/css/main.css
@@ -172,7 +172,7 @@ article {
 }
 
 article h2 {
-    font-family: "Hind", sans-serif;
+    font-family: "Kelly Slab", serif;
     font-size: 300%;
     font-weight: 500;
     text-align: center;
@@ -185,7 +185,7 @@ article h3 {
     text-align: left;
     padding-bottom: 0;
     margin-bottom: 0;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 
@@ -208,11 +208,11 @@ article p {
 }
 
 article .notes {
-    background-color: #f9f9f9;
+    background-color: #ededed;
     color: #666666;
-    border: 1px solid #e0e0e0;
+    border: 1px solid #b2b2b2;
     border-radius: 3px;
-    box-shadow: 0px 1px 1px #d3d3d3;
+    box-shadow: 0px 1px 1px #b2b2b2;
     padding-left: 20px;
     padding-top: 15px;
     padding-bottom: 15px;
