--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -492,7 +492,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 article {
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 20px;
 }
 
@@ -509,7 +509,7 @@ article h3 {
     font-weight: 500;
     text-align: left;
     padding-bottom: 0;
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
     margin-top: 1em;
 }
 
@@ -534,7 +534,6 @@ article p {
 
 article .notes {
     background-color: #f9f9f9;
-    color: #666666;
     border: 1px solid #e0e0e0;
     border-radius: 3px;
     box-shadow: 0px 1px 1px #d3d3d3;
@@ -543,11 +542,22 @@ article .notes {
     padding-bottom: 15px;
 
 }
-article li {
-    font-size: 1.25em;
+article ul li {
+    font-size: 20px;
     line-height: 1.5em;
-    font-family: "Merriweather", serif;
+    font-family: "Hind", serif;
     text-align: left;
+    font-weight: 500;
+    color: #666666;
+}
+
+article ul .li-content {
+    font-size: 1.3em !important;
+    font-family: "Merriweather", serif;
+    font-weight: 400;
+    text-align: left;
+    font-style: italic;
+
 }
 
 article .game {
