--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -47,8 +47,8 @@ h3 {
     font-family: "Merriweather", serif;
     font-weight: 300;
     font-size: 200%;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 hr.star-light {
@@ -71,6 +71,10 @@ hr.star-light:after {
 
     background-color: transparent;
     color: #b2b2b2;
+}
+
+hr.star-primary {
+    margin: 20px 0;
 }
 
 .img-centered {
@@ -509,7 +513,7 @@ article h3 {
     font-weight: 500;
     text-align: left;
     padding-bottom: 0;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.2em;
     margin-top: 1em;
 }
 
@@ -524,44 +528,52 @@ article h4 {
     margin-top: 2em;
 }
 
+article .table {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+article table tbody tr td{
+    border-top: none !important;
+    font-family: "Merriweather", serif;
+    font-size: 1.25em;
+}
+
+article table tbody tr {
+    transition: all ease 0.3s;
+}
+
 article p {
     font-size: 1.25em;
     line-height: 1.8em;
     font-family: "Merriweather", serif;
     text-align: left;
-    margin: 1.25em 0;
+    margin-top: 0;
+    margin-bottom: 1.25em;
 }
 
 article .notes {
-    background-color: #f9f9f9;
-    border: 1px solid #e0e0e0;
+    background-color: #faf8f5;
+    border: 1px solid #f0e9db;
     border-radius: 3px;
     box-shadow: 0px 1px 1px #d3d3d3;
     padding-left: 20px;
     padding-top: 15px;
     padding-bottom: 15px;
+    font-family: "Hind";
 
 }
-article ul li {
-    font-size: 20px;
+article ul li, article ol li {
+    font-size: 1.25em;
     line-height: 1.5em;
-    font-family: "Hind", serif;
-    text-align: left;
-    font-weight: 500;
-    color: #666666;
-}
-
-article ul .li-content {
-    font-size: 1.3em !important;
     font-family: "Merriweather", serif;
-    font-weight: 400;
     text-align: left;
-    font-style: italic;
-
 }
+
 
 article .game {
     width: 100%;
+    background-color: white !important;
 }
 
 article img {
@@ -583,6 +595,7 @@ article figcaption {
     padding-top: 25px;
     height: 0;
 }
+
 .video-wrapper iframe {
     position: absolute;
     top: 0;
