--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -553,8 +553,8 @@ article p {
 }
 
 article .notes {
-    background-color: #faf8f5;
-    border: 1px solid #f0e9db;
+    background-color: #FAFAFA;
+    border: 1px solid #E6E6E6;
     border-radius: 3px;
     box-shadow: 0px 1px 1px #d3d3d3;
     padding-left: 20px;
@@ -695,4 +695,16 @@ article figcaption {
 #myCarousel .left:hover {
     color: white;
     margin-left: -10px;
+}
+
+#myCarousel .carousel-indicators li {
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 15px;
+    width: 15px;
+}
+
+#myCarousel .carousel-indicators .active {
+    height: 17px;
+    width: 17px;
 }
