update objective statement

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -110,6 +110,13 @@ header .intro-text .bio {
     text-align: left;
 }
 
+header .intro-text .objective-statement {
+    font-style: italic;
+    line-height: 2em;
+    border-left: 3px solid grey;
+    padding-left: 10px;
+}
+
 @media (min-width: 768px) {
     header .container {
         padding-top: 200px;
