--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -569,14 +569,15 @@ article p.indented {
 }
 
 article .notes {
-    background-color: #FAFAFA;
+    background-color: #fcfcfc;
     border: 1px solid #E6E6E6;
     border-radius: 3px;
     box-shadow: 0px 1px 1px #d3d3d3;
     padding-left: 20px;
+    padding-right: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
-    font-family: "Hind";
+    font-family: "Hind", sans-serif;
 
 }
 article ul li, article ol li {
