--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -272,19 +272,19 @@ section.success {
     }
 }
 
-#portfolio .portfolio-item {
+.portfolio .portfolio-item {
     margin: 15px;
     right: 0;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+.portfolio .portfolio-item .portfolio-link {
     display: block;
     position: relative;
     max-width: 400px;
     margin: 0 auto;
 }
 
-#portfolio .portfolio-item .portfolio-title {
+.portfolio .portfolio-item .portfolio-title {
     width: 100%;
     font-family: "Merriweather", serif;
     font-size: 120%;
@@ -292,7 +292,7 @@ section.success {
     min-height: 50px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption {
+.portfolio .portfolio-item .portfolio-link .caption {
     background-color: rgba(73, 73, 73, 0.95);
     position: absolute;
     width: 100%;
@@ -303,11 +303,11 @@ section.success {
     -moz-transition: all ease 0.5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+.portfolio .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+.portfolio .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
     width: 100%;
     height: 20px;
@@ -318,21 +318,21 @@ section.success {
     color: white;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+.portfolio .portfolio-item .portfolio-link .caption .caption-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+.portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
+.portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
     margin: 0;
 }
 
-#portfolio * {
+.portfolio * {
     z-index: 2;
 }
 
 @media (min-width: 767px) {
-    #portfolio .portfolio-item {
+    .portfolio .portfolio-item {
         margin: 0 0 30px;
     }
 }
